[workspace]

members = [
  "compressed_dynamic_word_embeddings",
  "wasm",
  "cli",
]

[profile.release]
# Link time optimization (LTO) makes wasm 20% smaller and *seems* to make 
# execution faster (I didn't really measure performance, thouh).
lto = true

# opt-level = 3 turns out to lead to smaller wasm file size than opt-level = "s"
# or opt-level = "z". (opt-level = 2 is even marginally smaller but noticeably
# slower.)
opt-level = 3
