[package]
name = "time-capsule"
version = "0.0.1"
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compressed_dynamic_word_embeddings = { path = "../compressed_dynamic_word_embeddings" }
log = { version="0.4.8", features=["std"] }
stderrlog = "0.4.3"
structopt = "0.3.7"
failure = "0.1.6"
byteorder = "1.3.2"
