[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"
name = "flux-capacitor"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
compressed_dynamic_word_embeddings = {path = "../compressed_dynamic_word_embeddings"}
failure = "0.1.6"
log = {version = "0.4.8", features = ["std"]}
ndarray = "0.13.1"
ndarray-npy = "0.6"
stderrlog = "0.4.3"
structopt = "0.3.7"
