[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"
name = "flux-capacitor"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
clap = {version = "4.0.32", features = ["derive"]}
compressed_dynamic_word_embeddings = {path = "../compressed_dynamic_word_embeddings"}
log = {version = "0.4.8", features = ["std"]}
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
stderrlog = "0.5.1"
