[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"
name = "compressed_dynamic_word_embeddings"
version = "0.0.1"

[dependencies]
byteorder = "1.3.2"
constriction = {version = "0.3.5", default-features = false}

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
harness = false
name = "decompression"
