[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"
name = "compressed_dynamic_word_embeddings"
version = "0.0.1"

[dependencies]
byteorder = "1.3.2"
constriction = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[[bench]]
harness = false
name = "decompression"
