[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
description = "Provides access to compressed dynamic word embeddings files from WebAssembly."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "linguistic-time-capsule-backend"
repository = "https://github.com/robamler/linguistic-time-capsule.git"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
byteorder = "1.3.2"
compressed_dynamic_word_embeddings = {path = "../compressed_dynamic_word_embeddings"}
# rand = "0.7.2"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying. Therefore, it's turned off by default.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
# [I've observed some hard-to-reproduce errors when using wee_alloc; turning it
# off by default for now to see if that makes these errors go away.]
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.6"
