[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
description = "Provides access to compressed dynamic word embeddings files from WebAssembly."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "linguistic-flux-capacitor-backend"
repository = "https://github.com/robamler/linguistic-flux-capacitor.git"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
compressed_dynamic_word_embeddings = {path = "../compressed_dynamic_word_embeddings"}
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying. Therefore, it's turned off by default.
console_error_panic_hook = {version = "0.1.6", optional = true}

lol_alloc = "0.4.1"
